--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,25 +1,40 @@
-name: 'Check VPC Module'
+name: 'Modules Validation'
 
 on:
   push:
     branches: [ "main" ]
-    paths:
-      - 'modules/vpc/**'    # Uruchom tylko, gdy zmieniły się pliki w tym folderze
   pull_request:
-    paths:
-      - 'modules/vpc/**'
+    branches: [ "main" ]
 
 jobs:
-  validate:
+  validate-modules:
+    name: Validate Module
     runs-on: ubuntu-latest
+    # Definiujemy listę Twoich folderów
+    strategy:
+      matrix:
+        module: [s3_bucket, vpc]
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: hashicorp/setup-terraform@v3
-      
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.5.0
+
+      - name: Terraform Format Check
+        # Sprawdza czy kod jest ładnie sformatowany (terraform fmt)
+        working-directory: ./${{ matrix.module }}
+        run: terraform fmt -check
+
       - name: Terraform Init
-        working-directory: ./modules/vpc  # Kluczowe: wejdź do folderu przed komendą
+        # Inicjalizacja bez backendu (tylko do sprawdzenia składni)
+        working-directory: ./${{ matrix.module }}
         run: terraform init -backend=false
 
       - name: Terraform Validate
-        working-directory: ./modules/vpc
+        # Główny test - sprawdza czy kod jest poprawny technicznie
+        working-directory: ./${{ matrix.module }}
         run: terraform validate
