--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,15 +26,15 @@ jobs:
 
       - name: Terraform Format Check
         # Sprawdza czy kod jest ładnie sformatowany (terraform fmt)
-        working-directory: ./${{ matrix.module }}
+        working-directory: ./modules/${{ matrix.module }}
         run: terraform fmt -check
 
       - name: Terraform Init
         # Inicjalizacja bez backendu (tylko do sprawdzenia składni)
-        working-directory: ./${{ matrix.module }}
+        working-directory: ./modules/${{ matrix.module }}}
         run: terraform init -backend=false
 
       - name: Terraform Validate
         # Główny test - sprawdza czy kod jest poprawny technicznie
-        working-directory: ./${{ matrix.module }}
+        working-directory: ./modules/${{ matrix.module }}
         run: terraform validate
