--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,10 +10,13 @@ jobs:
   validate-modules:
     name: Validate Module
     runs-on: ubuntu-latest
-    # Definiujemy listę Twoich folderów
     strategy:
+      fail-fast: false
       matrix:
-        module: [s3_bucket, vpc]
+        # Tutaj wpisujesz pełne ścieżki do folderów, w których masz pliki .tf
+        module-path: 
+          - "Network/modules/vpc"
+          - "S3_bucket/modules/s3_bucket" # dopasuj tę ścieżkę do faktycznej lokalizacji S3
 
     steps:
       - name: Checkout Code
@@ -21,20 +24,12 @@ jobs:
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.5.0
-
-      - name: Terraform Format Check
-        # Sprawdza czy kod jest ładnie sformatowany (terraform fmt)
-        working-directory: ./modules/${{ matrix.module }}
-        run: terraform fmt -check
 
       - name: Terraform Init
-        # Inicjalizacja bez backendu (tylko do sprawdzenia składni)
-        working-directory: ./modules/${{ matrix.module }}}
+        # Teraz używamy pełnej ścieżki z macierzy
+        working-directory: ./${{ matrix.module-path }}
         run: terraform init -backend=false
 
       - name: Terraform Validate
-        # Główny test - sprawdza czy kod jest poprawny technicznie
-        working-directory: ./modules/${{ matrix.module }}
+        working-directory: ./${{ matrix.module-path }}
         run: terraform validate
