--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -31,3 +31,14 @@ jobs:
       - name: Terraform Validate
         working-directory: ./${{ matrix.module-path }}
         run: terraform validate
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
+
+      - name: Terraform Plan
+        working-directory: ./Network/modules/vpc
+        run: terraform plan
